# kanai

./: .gitignore  AGENTS.md  CONTEXT.md  Justfile  README.md  STRATEGY.md  compose.yml  lefthook.yml  opencode.json  skills-lock.json
api/: .env.example  .gitignore  AGENTS.md  Justfile  main.py  pyproject.toml
api/alembic/: env.py
api/app/: __init__.py  config.py  exceptions.py  logger.py  main.py
api/app/api/: __init__.py  deps.py
api/app/api/v1/: router.py
api/app/core/: config.py  exceptions.py  security.py
api/app/db/: __init__.py  base.py  session.py
api/app/db/migrations/: env.py
api/app/features/: __init__.py
api/app/features/a2a/: __init__.py  acceptance_criteria.py  router.py  (+2 more)
api/app/integrations/: email_client.py  oidc_metadata_provider.py  payment_client.py
api/app/models/: product.py  project.py  task.py  user.py
api/app/modules/: README.md
api/app/repositories/: __init__.py  product_repository.py  project_repository.py  project_task_change_event_repository.py  session_repository.py  task_repository.py  user_repository.py
api/app/schemas/: auth.py  product.py  project.py  task.py  user.py
api/app/services/: auth_service.py  database_service.py  product_service.py  project_access.py  project_backlog_service.py  project_chat_fanout.py  project_chat_service.py  project_column_service.py  project_dashboard_service.py  project_done_column_service.py  project_service.py  project_sprint_service.py  redis_service.py  seeder_service.py  task_service.py  user_service.py
api/app/utils/: pagination.py
api/docs/plans/: TEMPLATE_LIGHT.plan.md  domain_driven_development.plan.md
api/docs/specs/: TEMPLATE.spec.md  auth.spec.md  redis_service.spec.md
api/tests/: conftest.py  test_main.py  test_pytest_env.py  test_redis_service.py  test_task_ranking.py
api/tests/architecture/: helpers.py  test_bounded_context_layout.py  test_domain_dependency_rules.py  test_feature_module_boundaries.py  test_shared_services_boundaries.py
api/tests/features/: test_a2a_router.py
api/tests/services/: test_database_service.py  test_project_access.py  test_task_column_assignment.py  test_task_move_workflow.py  test_task_prerequisites.py
(+379 files in other folders)
