[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[fastapi]>=1.1.0",
    "alembic>=1.17.1",
    "asyncpg>=0.31.0",
    "cachetools>=7.0.5",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "joserfc>=1.6.3",
    "loguru>=0.7.3",
    "pydantic-ai-slim[openai]>=1.0.0",
    "pydantic-settings>=2.13.1",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.31.0",
    "lefthook>=2.1.4",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.6.0",
    "pytest-httpx>=0.36.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
]

[tool.pytest_env]
DATABASE_URL = "sqlite+aiosqlite:///./test.db"
REDIS_URL = "redis://localhost:6379/0"
ENVIRONMENT = "local"
CLIENT_ORIGIN = "http://localhost:5173"
PUBLIC_API_BASE_URL = "https://api.example.test"
AUTH__DISCOVERY_ENDPOINT = "https://example.test/.well-known/openid-configuration"
AUTH__AUDIENCE = "kanai-api"
AI__MODEL_NAME = "test-model"
AI__BASE_URL = "https://ai.example.test/v1"
AI__API_KEY = "test-api-key"
